--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "chart.js": "^4.4.8",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.6.5",
     "lucide-react": "^0.484.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0"
